# facialDetection

./: CMakeLists.txt  config.cpp  facialRecognitionAngleDetection.cpp
